<resources>

    <string-array name="main_cat">
        <item><font fgcolor='#FF8E8E93'>Select Business Type</font></item>
        <item><font fgcolor='#FF8E8E93'>Dealer</font></item>
        <item><font fgcolor='#FF8E8E93'>Manufacturer</font></item>
        <item><font fgcolor='#FF8E8E93'>Affiliate Marketer</font></item>
    </string-array>
    <string-array name="mcons">
        <item><font fgcolor='#FF8E8E93'>Select Remainder Type</font></item>
        <item><font fgcolor='#FF8E8E93'>Meeting</font></item>
        <item><font fgcolor='#FF8E8E93'>Call Follow Up</font></item>
        <item><font fgcolor='#FF8E8E93'>Chatting</font></item>
        <item><font fgcolor='#FF8E8E93'>Message/Inquiry</font></item>
    </string-array>


    <string-array name="sub_main_cat">
        <item><font fgcolor='#FF8E8E93'>Admin/Owner</font></item>
        <item><font fgcolor='#FF8E8E93'>Sales</font></item>
        <item><font fgcolor='#FF8E8E93'>Dispatch</font></item>
        <item><font fgcolor='#FF8E8E93'>Accountant</font></item>
        <item><font fgcolor='#FF8E8E93'>Buyer</font></item>
        <item><font fgcolor='#FF8E8E93'>Dealer</font></item>
        <item><font fgcolor='#FF8E8E93'>Purchase</font></item>
        <item><font fgcolor='#FF8E8E93'>IT</font></item>
        <item><font fgcolor='#FF8E8E93'>Tally/Recheck</font></item>
        <item><font fgcolor='#FF8E8E93'>Service/Production</font></item>
    </string-array>
    <string name="app_name">NS</string>

    <string name="login_welcome">Welcome to</string>
    <string name="login_app_details">India\'s first Business Networking Platform</string>
    <string name="login_agree">Agree &amp; Continue</string>
    <string name="login_allow">Allow/Deny</string>
    <string name="title_dialog">DGFAB</string>
    <string name="msg_dialog">Are you sure want to close Matrimony?</string>
    <string name="yes_dialog">Yes!</string>
    <string name="no_dialog">No</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <!--text app intro screen -->
    <string name="first_intro">DGFAB with Business</string>
    <string name="second_intro">Manage &amp; promote your product catalogue</string>
    <string name="third_intro">Get your free business website</string>

    <string name="first_intro_msg">Retailers, Traders, Wholesalers, Distributors and Manufacturers</string>
    <string name="second_intro_msg">aa</string>
    <string name="third_intro_msg">aa</string>

    <string name="term_cond">Tap "Agree &amp; Continue" to accept the</string>
    <string name="terms_conditions">Terms of Service &amp; Privacy policy</string>
    <string name="permission_text">For the best DGFAB experience, we require a few permissions</string>
    <string name="permission_contact">We need your contact to elp build your business network on DGFAB</string>
    <string name="permission_location">We use your location to explore business and groups near you more effectively</string>
    <string name="permission_storage">We will use this to store your product images and other photos</string>
    <string name="login_send">Send verification code</string>
    <string name="login_verfiy">Verify number</string>
    <string name="email_verify">Verify Email</string>
    <string name="verify_number_text">Verify your number</string>
    <string name="recend_code">Resend verification code</string>
    <string name="login_mobile_text">Enter your mobile no</string>
    <string name="forget_mobile_text">Enter your Email Id</string>
    <string name="login_change_number">Change mobile number</string>
    <string name="email_change_id">Change Email Id</string>
    <string name="login_mobile_number">We will send a 6 digit verification \n code to this mobile number</string>
    <string name="email_mobile_text">We will send your Mobile no \n your Email Id</string>
    <string name="forget_mobile_number">We will send a verification \n code to this Email Id</string>
    <string name="forget_email_id">We will send a Password \n to your registered Email Id</string>
    <string name="login_code_text_details">Enter the 6 digit verification code \n send to via SMS</string>
    <string name="Email_code_text_details">Enter the 6 digit verification code \n send to via Email</string>
    <string name="primary_reason">What is your primary reason for sourcing?</string>
    <string name="primary_reason_details">This will help us match you with suppliers that are a good fit.</string>
    <string name="business_need">I am  Buying products for my company or to sell.</string>
    <string name="personal_use">I am the end consumer of the products I source.</string>
    <string name="title_activity_business__drawer">Business_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_product">Add Products</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    //**************************************
    <string-array name="city_name">
        <item>Select city</item>
        <item>Mumbai</item>
        <item>Indore</item>
        <item>Pune</item>
        <item>Banglore</item>
        <item>Delhi</item>
    </string-array>

    <string name="large_text">"Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"
</string>


    <!--text app intro screen -->


</resources>
