<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_foster"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            />

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorTextBlack"
            android:textSize="15dp"
            android:textStyle="normal"
            android:typeface="serif" />

    </android.support.v7.widget.Toolbar>
    </android.support.v7.widget.CardView>

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/viewpager"
        android:layout_below="@id/card_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:id="@+id/viewPagerCountDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/llInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:orientation="horizontal" />


    <LinearLayout
        android:id="@+id/llInfo"
        android:layout_above="@id/llSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="18dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ctvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/term_cond"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorTextBlack"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/ctvText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:text="@string/terms_conditions"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorTextBlack"
            android:textSize="13dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
       android:background="@color/colorPrimary"
        android:clickable="false"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login_agree"
            android:textColor="@color/colorWhite"
            android:textSize="13dp"
            android:visibility="visible" />


    </LinearLayout>

</RelativeLayout>
