<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_foster"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp">

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:src="@drawable/logo"
                />

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorTextBlack"
                android:textSize="15dp"
                android:textStyle="normal"
                android:typeface="serif" />

        </android.support.v7.widget.Toolbar>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/llInfo"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

            <TextView
                android:id="@+id/ctvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_text"
                android:textStyle="bold"
                android:textColor="@color/colorTextBlack"
                android:textSize="15dp" />





                <LinearLayout

                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:weightSum="1"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="0.5"
                            android:text="Contact"
                            android:drawableLeft="@drawable/book"
                            android:drawablePadding="5dp"
                            android:gravity="left|center"
                            android:textSize="15dp"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                    </LinearLayout>

                    <TextView
                        android:text="@string/permission_contact"
                        android:gravity="left"
                        android:textSize="13dp"
                        android:textColor="#000"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout

                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:weightSum="1"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="0.5"
                            android:text="Location"
                            android:drawableLeft="@drawable/location"
                            android:drawablePadding="5dp"
                            android:gravity="left|center"
                            android:textSize="15dp"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                    </LinearLayout>

                    <TextView
                        android:text="@string/permission_location"
                        android:gravity="left"
                        android:textSize="13dp"
                        android:textColor="#000"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout

                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:weightSum="1"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="0.5"
                            android:text="Storage"
                            android:drawableLeft="@drawable/storage"
                            android:drawablePadding="5dp"
                            android:gravity="left|center"
                            android:textSize="15dp"
                            android:textColor="#000"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                    </LinearLayout>

                    <TextView
                        android:text="@string/permission_storage"
                        android:gravity="left"
                        android:textSize="13dp"
                        android:textColor="#000"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>





        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.9"
            android:id="@+id/llSkip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:clickable="false"
            android:visibility="visible">

            <TextView
                android:id="@+id/allow_deny"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login_allow"
                android:textColor="@color/colorWhite"
                android:textSize="13dp"
                android:visibility="visible" />


        </LinearLayout>

    </LinearLayout>



</LinearLayout>
