<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_foster"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp">

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="fitXY"
                android:src="@drawable/logo"
                />

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorTextBlack"
                android:textSize="15dp"
                android:textStyle="normal"
                android:typeface="serif" />

            <TextView
                android:id="@+id/tv_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Skip"
                android:textAlignment="textEnd"
                android:textColor="@color/colorTextBlack"
                android:textSize="15dp"
                android:textStyle="normal"
                android:typeface="serif" />

        </android.support.v7.widget.Toolbar>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/llInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ctvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/primary_reason"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="20dp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:text="@string/primary_reason_details"
                    android:textColor="@color/gray"
                    android:textSize="13dp" />


                <android.support.v7.widget.CardView
                    android:id="@+id/bsneed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/circlewa"
                    android:padding="5dp">

                    <RadioButton
                        android:id="@+id/bsrad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="1">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_weight="0.5"
                                android:drawablePadding="5dp"
                                android:gravity="left|center"
                                android:text="Business need"
                                android:textColor="#000"
                                android:textSize="15dp"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="left"
                            android:text="@string/business_need"
                            android:textColor="#000"
                            android:textSize="13dp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/persona"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="5dp">

                    <RadioButton
                        android:id="@+id/persord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="20dp" />

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="1">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_weight="0.5"
                                android:drawablePadding="5dp"
                                android:gravity="left|center"
                                android:text="Personal Use"
                                android:textColor="#000"
                                android:textSize="15dp"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="left"
                            android:text="@string/personal_use"
                            android:textColor="#000"
                            android:textSize="13dp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSkip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_weight="0.9"
            android:background="@color/colorPrimary"
            android:clickable="false"
            android:visibility="visible">

            <TextView
                android:id="@+id/allow_reason"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Next"
                android:textColor="@color/colorWhite"
                android:textSize="13dp"
                android:visibility="visible" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
